fix misaligned search bar

--- a/static/css/page-layouts/content-header.css
+++ b/static/css/page-layouts/content-header.css
@@ -85,7 +85,6 @@
     flex-direction: column;
     align-items: stretch;
     background-color: var(--primary);
-    border: 1px solid var(--grey-head);
     border-radius: 3px;
     flex-shrink: 1;
 }
@@ -131,7 +130,6 @@
     justify-content: flex-start;
     align-items: stretch;
     background-color: var(--primary);
-    border: 1px solid var(--grey-head);
     border-radius: 3px;
     flex: 1 1 0px;
     top: 12px;
@@ -153,7 +151,6 @@
     justify-content: flex-start;
     align-items: stretch;
     background-color: var(--primary);
-    border: 1px solid var(--grey-head);
     border-radius: 3px;
     flex: 1 1 0px;
     min-width: min(500px,100vw - 660px);
@@ -191,7 +188,6 @@
     max-height: 600px;
     overflow-y: auto;
     z-index: 2;
-    border: 1px solid var(--grey-head);
     border-radius: 0px 0px 3px 3px;
     position: fixed;
     top: 48px;
